# llm-tasks-viewer

./: CLAUDE.md  Cargo.toml  PKGBUILD  README.md  deploy.sh
assets/: llm-tasks-viewer.desktop  style.css
src/: chat.rs  detail.rs  ipc.rs  main.rs  sidebar.rs  state.rs
